force-app/main/default/objects/Registration__c/fields/CEO_CFO_First_Name__c.field-meta.xml
<CustomField>
    <fullName>CEO_CFO_First_Name__c</fullName>
    <label>CEO/CFO First Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>