force-app/main/default/objects/Registration__c/fields/CEO_CFO_Job_Role__c.field-meta.xml
<CustomField>
    <fullName>CEO_CFO_Job_Role__c</fullName>
    <label>CEO/CFO Job Role</label>
    <length>60</length>
    <type>Text</type>
</CustomField>