force-app/main/default/objects/Registration__c/fields/Chargeback_Fee_Without_Document__c.field-meta.xml
<CustomField>
    <fullName>Chargeback_Fee_Without_Document__c</fullName>
    <label>Chargeback Fee Without Document</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>