force-app/main/default/objects/Registration__c/fields/ColourScheme__c.field-meta.xml
<CustomField>
    <fullName>ColourScheme__c</fullName>
    <description>For use with the Registration Form</description>
    <label>ColourScheme</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Grey</fullName>
            </value>
            <value>
                <fullName>Purple</fullName>
            </value>
            <value>
                <fullName>Blue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>