force-app/main/default/objects/Registration__c/fields/Country_Phone_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Country_Phone_Prefix__c</fullName>
    <formula>Case(Country__c,
&quot;Andorra&quot;, &quot;376&quot;,
&quot;Australia&quot;, &quot;61&quot;,
&quot;Austria&quot;, &quot;43&quot;,
&quot;Bahrain&quot;, &quot;973&quot;,
&quot;Belgium&quot;, &quot;32&quot;,
&quot;Bulgaria&quot;, &quot;359&quot;,
&quot;Canada&quot;, &quot;1&quot;,
&quot;Cayman Islands&quot;, &quot;1-345&quot;,
&quot;Chile&quot;, &quot;56&quot;,
&quot;Croatia&quot;, &quot;385&quot;,
&quot;Cyprus&quot;, &quot;357&quot;,
&quot;Czech Republic&quot;, &quot;420&quot;,
&quot;Denmark&quot;, &quot;45&quot;,
&quot;Estonia&quot;, &quot;372&quot;,
&quot;Finland&quot;, &quot;358&quot;,
&quot;France&quot;, &quot;33&quot;,
&quot;Germany&quot;, &quot;49&quot;,
&quot;Greece&quot;, &quot;30&quot;,
&quot;Greenland&quot;, &quot;299&quot;,
&quot;Guernsey&quot;, &quot;44-1481&quot;,
&quot;Hong Kong&quot;, &quot;852&quot;,
&quot;Hungary&quot;, &quot;36&quot;,
&quot;Iceland&quot;, &quot;354&quot;,
&quot;Ireland&quot;, &quot;353&quot;,
&quot;Isle of Man&quot;, &quot;44-1624&quot;,
&quot;Israel&quot;, &quot;972&quot;,
&quot;Italy&quot;, &quot;39&quot;,
&quot;Japan&quot;, &quot;81&quot;,
&quot;Jordan&quot;, &quot;962&quot;,
&quot;Latvia&quot;, &quot;371&quot;,
&quot;Liechtenstein&quot;, &quot;423&quot;,
&quot;Lithuania&quot;, &quot;370&quot;,
&quot;Luxembourg&quot;, &quot;352&quot;,
&quot;Macao&quot;, &quot;853&quot;,
&quot;Malaysia&quot;, &quot;60&quot;,
&quot;Malta&quot;, &quot;356&quot;,
&quot;Mauritius&quot;, &quot;230&quot;,
&quot;Namibia&quot;, &quot;264&quot;,
&quot;Netherlands&quot;, &quot;31&quot;,
&quot;New Caledonia&quot;, &quot;687&quot;,
&quot;New Zealand&quot;, &quot;64&quot;,
&quot;Norway&quot;, &quot;850&quot;,
&quot;Poland&quot;, &quot;48&quot;,
&quot;Portugal&quot;, &quot;351&quot;,
&quot;Puerto Rico&quot;, &quot;1-787, 1-939&quot;,
&quot;Qatar&quot;, &quot;974&quot;,
&quot;Romania&quot;, &quot;40&quot;,
&quot;Saint Barthélemy&quot;, &quot;590&quot;,
&quot;Singapore&quot;, &quot;65&quot;,
&quot;Slovakia&quot;, &quot;421&quot;,
&quot;Slovenia&quot;, &quot;386&quot;,
&quot;Spain&quot;, &quot;34&quot;,
&quot;Sweden&quot;, &quot;46&quot;,
&quot;Switzerland&quot;, &quot;41&quot;,
&quot;Taiwan, Province of China&quot;, &quot;886&quot;,
&quot;Thailand&quot;, &quot;66&quot;,
&quot;United Arab Emirates&quot;, &quot;971&quot;,
&quot;United Kingdom&quot;, &quot;44&quot;,
&quot;United States&quot;, &quot;1&quot;,
&quot;Uruguay&quot;, &quot;598&quot;,
&quot;&quot;)</formula>
    <label>Country Phone Prefix</label>
    <type>Text</type>
</CustomField>