force-app/main/default/objects/Registration__c/fields/Country_Product__c.field-meta.xml
<CustomField>
    <fullName>Country_Product__c</fullName>
    <formula>CASE(Country__c, &#39;Australia&#39;, &#39;A&#39;, &#39;New Zealand&#39;, &#39;NZ&#39;, &#39;Other&#39;)
+ &#39;-&#39; 
+ IF(INCLUDES(Product__c, &#39;eNett EFT&#39;), &#39;E&#39;, &#39;&#39;)
+ IF(INCLUDES(Product__c, &#39;VANs&#39;), &#39;V&#39;, &#39;&#39;)</formula>
    <label>Country / Product</label>
    <type>Text</type>
</CustomField>