force-app/main/default/objects/Registration__c/fields/DD_Checkboxes_incomplete__c.field-meta.xml
<CustomField>
    <fullName>DD_Checkboxes_incomplete__c</fullName>
    <formula>NOT(AND(Business_Registration_Number__c, OR(Directors__c, ISPICKVAL(Business_Type__c, &#39;Sole Trader&#39;), ISPICKVAL(Business_Type__c, &#39;Partnership&#39;),ISPICKVAL(Business_Type__c, &#39;Association/Club&#39;)), OR(Risk_Assessment__c, NOT(INCLUDES(Product__c, &#39;VANs&#39;))), Registered_Company_Name_Check__c, Trading_Name_Checkbox__c, OR(Bank_Account_Details__c, NOT(INCLUDES(Product__c, &#39;VANs&#39;))), Business_Address__c, Screening__c, OR(Beneficial_Ownership__c, NOT(INCLUDES(Product__c, &#39;VANs&#39;)), ISPICKVAL(Business_Type__c, &#39;Public Company&#39;), ISPICKVAL(Business_Type__c, &#39;Sole Trader&#39;), ISPICKVAL(Business_Type__c, &#39;Regulated Firm&#39;), ISPICKVAL(Business_Type__c, &#39;Government&#39;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DD Checkboxes Incomplete</label>
    <type>Checkbox</type>
</CustomField>