force-app/main/default/objects/Registration__c/fields/DD_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>DD_Completed_Date__c</fullName>
    <inlineHelpText>Automatically populated when the DD status is set to &#39;Approved&#39; or &#39;Declined&#39;</inlineHelpText>
    <label>DD Completed Date</label>
    <type>Date</type>
</CustomField>