force-app/main/default/objects/Registration__c/fields/DD_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>DD_Created_Date__c</fullName>
    <inlineHelpText>Automatically populated when the Registration goes into the DD queue.</inlineHelpText>
    <label>DD Created Date</label>
    <type>DateTime</type>
</CustomField>