force-app/main/default/objects/Registration__c/fields/DD_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>DD_Start_Date__c</fullName>
    <inlineHelpText>Automatically populated based on the user pressing the &#39;Start DD&#39; button which sets the DD status to &#39;In Progress&#39;</inlineHelpText>
    <label>DD Start Date</label>
    <type>Date</type>
</CustomField>