force-app/main/default/objects/Registration__c/fields/DD_Start_Datetime__c.field-meta.xml
<CustomField>
    <fullName>DD_Start_Datetime__c</fullName>
    <description>New field created for DD KPI calculation.  It wasn&#39;t possible to change DD Start Date to a date time since it would require major process flow changes and a data migration but this should be cleaned up at some point.</description>
    <label>DD Start Datetime</label>
    <type>DateTime</type>
</CustomField>