force-app/main/default/objects/Registration__c/fields/DD_Total_Business_HoursDays__c.field-meta.xml
<CustomField>
    <fullName>DD_Total_Business_HoursDays__c</fullName>
    <formula>TEXT(ROUND(DD_Total_Business_Hours__c,2)) + &#39; hours (&#39; + TEXT(ROUND(DD_Total_Business_Hours__c/8.0,1)) + &#39; days)&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DD Total Business Hours</label>
    <type>Text</type>
</CustomField>