force-app/main/default/objects/Registration__c/fields/DD_Type__c.field-meta.xml
<CustomField>
    <fullName>DD_Type__c</fullName>
    <inlineHelpText>Automatically populated to identify a new DD application or a re DD.</inlineHelpText>
    <label>DD Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Re DD Manual</fullName>
            </value>
            <value>
                <fullName>Re DD Automatic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>