force-app/main/default/objects/Registration__c/fields/Declined_Reason__c.field-meta.xml
<CustomField>
    <fullName>Declined_Reason__c</fullName>
    <inlineHelpText>Must be provided when the DD is set to &#39;Declined&#39;</inlineHelpText>
    <label>Declined Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Risk</fullName>
            </value>
            <value>
                <fullName>DD Not Met</fullName>
            </value>
            <value>
                <fullName>DD Not Provided</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Language</fullName>
            </value>
            <value>
                <fullName>Not Travel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>