force-app/main/default/objects/Registration__c/fields/Director_Count__c.field-meta.xml
<CustomField>
    <fullName>Director_Count__c</fullName>
    <label>Director Count</label>
    <summaryFilterItems>
        <field>Director__c.Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Director__c.Registration__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>