force-app/main/default/objects/Registration__c/fields/Doc_Business_Address2__c.field-meta.xml
<CustomField>
    <fullName>Doc_Business_Address2__c</fullName>
    <formula>IF(ISBLANK( RegBusiness_Address_Line_1__c ), &quot;&quot;, RegBusiness_Address_Line_1__c &amp; &quot;, &quot;) &amp;
IF(ISBLANK( RegBusiness_Address_Line_2__c ), &quot;&quot;, RegBusiness_Address_Line_2__c &amp; &quot;, &quot;) &amp;
IF(ISBLANK( RegBusiness_City__c ), &quot;&quot;, RegBusiness_City__c &amp; &quot; &quot;) &amp;
IF(ISBLANK( RegBusiness_Postcode__c ), &quot;&quot;, RegBusiness_Postcode__c &amp; &quot;, &quot;) &amp;
IF(ISBLANK( RegBusiness_State_Province__r.Name ), &quot;&quot;, RegBusiness_State_Province__r.Name &amp; &quot;, &quot;) &amp;
IF(ISBLANK( TEXT( RegBusiness_Country__c )), &quot;&quot;, TEXT( RegBusiness_Country__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Doc Business Address2</label>
    <type>Text</type>
</CustomField>