force-app/main/default/objects/Registration__c/fields/Doc_CEO_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Doc_CEO_Full_Name__c</fullName>
    <description>This field is required for the document generation.</description>
    <formula>IF(ISBLANK( CEO_CFO_First_Name__c ), &quot;&quot;, CEO_CFO_First_Name__c  &amp; &quot; &quot;) &amp;
IF(ISBLANK( CEO_CFO_Middle_Name__c ), &quot;&quot;,  CEO_CFO_Middle_Name__c  &amp; &quot; &quot;) &amp;
IF(ISBLANK( CEO_CFO_Last_Name__c ), &quot;&quot;,  CEO_CFO_Last_Name__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Doc CEO Full Name</label>
    <type>Text</type>
</CustomField>