force-app/main/default/objects/Registration__c/fields/Doc_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Doc_Percentage__c</fullName>
    <description>This field is required for the document generation.</description>
    <formula>IF( Text( RegBusiness_Country__c ) = &quot;Hong Kong&quot;, 10, 25)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Doc Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>