force-app/main/default/objects/Registration__c/fields/Docs_Needed__c.field-meta.xml
<CustomField>
    <fullName>Docs_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Docs Needed</label>
    <type>Checkbox</type>
</CustomField>