force-app/main/default/objects/Registration__c/fields/Drawloop_Next2__c.field-meta.xml
<CustomField>
    <fullName>Drawloop_Next2__c</fullName>
    <description>For CMPA (Australia) Email</description>
    <formula>&quot;SFRegistration__c:&quot; &amp; Id &amp; &quot;;SFContact:&quot; &amp; Account__r.Primary_Contact_Id__c &amp; &quot;;DDPId:&quot; &amp; $Setup.Drawloop_DDP_Settings__c.CMPA_DDP__c &amp; &quot;;Deploy:&quot; &amp; $Setup.Drawloop_DDP_Settings__c.CMPA_Australia_Email_Delivery__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Drawloop_Next2</label>
    <type>Text</type>
</CustomField>