force-app/main/default/objects/Registration__c/fields/Drawloop_Next__c.field-meta.xml
<CustomField>
    <fullName>Drawloop_Next__c</fullName>
    <formula>&quot;SFRegistration__c:&quot; &amp; Id &amp; &quot;;SFLead:&quot; &amp; Lead__c &amp; &quot;;DDPId:&quot; &amp; $Setup.Drawloop_DDP_Settings__c.Email_Client_Agreement_DDP__c &amp; &quot;;Deploy:&quot; &amp; $Setup.Drawloop_DDP_Settings__c.Email_Client_Agreement_Email_Delivery__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Drawloop_Next</label>
    <type>Text</type>
</CustomField>