force-app/main/default/objects/Registration__c/fields/EFT_Transaction_Fee__c.field-meta.xml
<CustomField>
    <fullName>EFT_Transaction_Fee__c</fullName>
    <label>EFT Transaction Fee</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>