force-app/main/default/objects/Registration__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>From Lead</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>