force-app/main/default/objects/Registration__c/fields/Email_CMPA__c.field-meta.xml
<CustomField>
    <fullName>Email_CMPA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email CMPA</label>
    <type>Checkbox</type>
</CustomField>