force-app/main/default/objects/Registration__c/fields/Email_TCs_from_Online_Form__c.field-meta.xml
<CustomField>
    <fullName>Email_TCs_from_Online_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email TCs from Online Form</label>
    <type>Checkbox</type>
</CustomField>