force-app/main/default/objects/Registration__c/fields/Email_Thread_Id__c.field-meta.xml
<CustomField>
    <fullName>Email_Thread_Id__c</fullName>
    <formula>&quot;[ref:&quot; &amp; Id &amp; &quot;]&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used an identifier for outgoing and incoming emails sent during the DD process. This ID is used in the subject of the email generated from Salesforce.</inlineHelpText>
    <label>Email Thread Id</label>
    <type>Text</type>
</CustomField>