force-app/main/default/objects/Registration__c/fields/eNett_Account_Fee__c.field-meta.xml
<CustomField>
    <fullName>eNett_Account_Fee__c</fullName>
    <inlineHelpText>Replacing eNett Payments Platform Fee (VANs Subscription Fee)</inlineHelpText>
    <label>eNett Account Fee</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>