force-app/main/default/objects/Registration__c/fields/eNett_Actioned__c.field-meta.xml
<CustomField>
    <fullName>eNett_Actioned__c</fullName>
    <label>eNett Actioned</label>
    <type>Date</type>
</CustomField>