force-app/main/default/objects/Registration__c/fields/Escalated_To__c.field-meta.xml
<CustomField>
    <fullName>Escalated_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is populated by process builder when a registration escalation is assigned and is used to determine the region to apply for calculating the KPI business hours.</description>
    <label>Escalated To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Registrations1</relationshipName>
    <type>Lookup</type>
</CustomField>