force-app/main/default/objects/Registration__c/fields/Estimated_Annual_Transaction_Value__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Annual_Transaction_Value__c</fullName>
    <label>Estimated Annual Transaction Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>